[tool.poetry]
name = "threads-api"
version = "1.0.8"
description = "Unofficial Python client for Meta Threads.net API"
authors = ["Danie1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.26.0"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
aiohttp = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
