[tool.poetry]
name = "threads-api"
version = "1.2.0"
description = "Unofficial Python client for Meta Threads.net API"
authors = ["Danie1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.26.0"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
aiohttp = "^3.8.4"
cryptography = "^41.0.2"
instagrapi = "^1.17.13"
pillow = "^10.0.0"
colorama = "^0.4.6"
pytest-mock = "^3.11.1"
flake8 = "^6.0.0"
pytz = "^2023.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
